varnish-macros/snapshots/shared2_tuple@json.snap
---
source: varnish-macros/src/tests.rs
snapshot_kind: text
---
VMOD_JSON_SPEC
[
  [
    "$VMOD",
    "1.0",
    "tuple",
    "Vmod_vmod_tuple_Func",
    "e5bea4170c37d3b58727c522dba1121d879d0b838e218b619f4c04d85a3b9843",
    "Varnish (version) (hash)",
    "0",
    "0"
  ],
  [
    "$CPROTO",
    "
typedef VCL_VOID td_vmod_tuple_per_tsk_val(
    VRT_CTX,
    struct vmod_priv *,
    struct vmod_priv *
);

struct Vmod_vmod_tuple_Func {
  vmod_event_f *f_on_event;
  td_vmod_tuple_per_tsk_val *f_per_tsk_val;
};

static struct Vmod_vmod_tuple_Func Vmod_vmod_tuple_Func;"
  ],
  [
    "$EVENT",
    "Vmod_vmod_tuple_Func.f_on_event"
  ],
  [
    "$FUNC",
    "per_tsk_val",
    [
      [
        "VOID"
      ],
      "Vmod_vmod_tuple_Func.f_per_tsk_val",
      "",
      [
        "PRIV_TASK",
        "tsk_vals"
      ],
      [
        "PRIV_VCL",
        "vcl_vals"
      ]
    ]
  ]
]

